  search results can be provided. The first custom collector provides `ToParentBlockJoin[Float|Byte]KnnVectorQuery`
  joining child vector documents with their parent documents. (Ben Trent)

* GITHUB#12479: Add new Maximum Inner Product vector similarity function for non-normalized dot-product
  vector search. (Jack Mazanec, Ben Trent)

Improvements
---------------------
* GITHUB#12374: Add CachingLeafSlicesSupplier to compute the LeafSlices for concurrent segment search (Sorabh Hamirwasia)

* GITHUB#12499: Simplify task executor for concurrent operations by offloading concurrent operations to the
  provided executor unconditionally. (Luca Cavanna)

Optimizations
---------------------

* GITHUB#12377: Avoid redundant loop for compute min value in DirectMonotonicWriter. (Chao Zhang)

* GITHUB#12361: Faster top-level disjunctions sorted by descending score.
  (Adrien Grand)

* GITHUB#12444: Faster top-level disjunctions sorted by descending score in
  case of many terms or queries that expose suboptimal score upper bounds.
  (Adrien Grand)

* GITHUB#12383: Assign a dummy simScorer in TermsWeight if score is not needed. (Sagar Upadhyaya)

* GITHUB#12372: Reduce allocation during HNSW construction (Jonathan Ellis)

* GITHUB#12385: Restore parallel knn query rewrite across segments rather than slices (Luca Cavanna)

* GITHUB#12381: Speed up NumericDocValuesWriter with index sorting. (Chao Zhang)

* GITHUB#12453: Faster bulk numeric reads from BufferedIndexInput (Armin Braun)

* GITHUB#12415: Optimized counts on disjunctive queries. (Adrien Grand)

* GITHUB#12518: Use panama vector API to speed up l2norm calculations (Ben Trent)

* GITHUB##12371: Lazy computation of similarity score during initializeFromGraph (Jack Wang)

Changes in runtime behavior
---------------------

* GITHUB#12516: Unwrap and throw execution exceptions cause when performing concurrent search (Luca Cavanna)
